--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,188 @@
+aiohttp==3.9.3
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+amqp==5.2.0
+annotated-types==0.6.0
+antlr4-python3-runtime==4.9.3
+anyio==4.3.0
+appdirs==1.4.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+async-timeout==4.0.3
+asyncssh==2.14.2
+atpublic==4.0
+attrs==23.2.0
+Babel==2.14.0
+beautifulsoup4==4.12.3
+billiard==4.2.0
+bleach==6.1.0
+celery==5.3.6
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+comm==0.2.2
+configobj==5.0.8
+cryptography==42.0.5
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+dictdiffer==0.9.0
+diskcache==5.6.3
+distro==1.9.0
+dpath==2.1.6
+dulwich==0.21.7
+dvc==3.49.0
+dvc-data==3.15.1
+dvc-http==2.32.0
+dvc-objects==5.1.0
+dvc-render==1.0.1
+dvc-studio-client==0.20.0
+dvc-task==0.4.0
+entrypoints==0.4
+exceptiongroup==1.2.0
+executing==2.0.1
+fastjsonschema==2.19.1
+filelock==3.13.3
+flatten-dict==0.4.2
+flufl.lock==7.1.1
+fonttools==4.50.0
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.3.1
+funcy==2.0
+gitdb==4.0.11
+GitPython==3.1.42
+grandalf==0.8
+gto==1.7.1
+h11==0.14.0
+httpcore==1.0.4
+httpx==0.27.0
+hydra-core==1.3.2
+idna==3.6
+ipykernel==6.29.3
+ipython==8.22.2
+ipywidgets==8.1.2
+isoduration==20.11.0
+iterative-telemetry==0.0.8
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.3.2
+json5==0.9.24
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 jupyter==1.0.0
-pandas==1.3.3
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.4
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyter_server==2.13.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.4
+jupyterlab_widgets==3.0.10
+kiwisolver==1.4.5
+kombu==5.3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.5.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==3.0.2
+multidict==6.0.5
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.3
+nest-asyncio==1.6.0
+networkx==3.2.1
+notebook==7.1.2
+notebook_shim==0.2.4
 numpy==1.21.4
-scipy==1.7.3
+omegaconf==2.3.0
+orjson==3.9.15
+overrides==7.7.0
+packaging==24.0
+pandas==1.3.3
+pandocfilters==1.5.1
+parso==0.8.3
+pathspec==0.12.1
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==3.11.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+pydantic==2.6.4
+pydantic_core==2.16.3
+pydot==2.0.0
+pygit2==1.14.1
+Pygments==2.17.2
+pygtrie==2.5.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.34.0
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.18.0
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
 scikit-learn==1.3.2
+scipy==1.7.3
+scmrepo==3.3.1
 seaborn==0.11.2
+semver==3.0.2
+Send2Trash==1.8.2
+shortuuid==1.0.13
+shtab==1.7.1
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+sqltrie==0.11.0
+stack-data==0.6.3
+tabulate==0.9.0
+terminado==0.18.1
+threadpoolctl==3.4.0
+tinycss2==1.2.1
+tomli==2.0.1
+tomlkit==0.12.4
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.2
+typer==0.10.0
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.10.0
+tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.2.1
+vine==5.1.0
+voluptuous==0.14.2
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+widgetsnbextension==4.0.10
+yarl==1.9.4
+zc.lockfile==3.0.post1
