--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,12 @@ asyncssh==2.14.2
 atpublic==4.0
 attrs==23.2.0
 Babel==2.14.0
+backoff==2.2.1
 beautifulsoup4==4.12.3
 billiard==4.2.0
 bleach==6.1.0
+boto3==1.34.76
+botocore==1.34.76
 celery==5.3.6
 certifi==2024.2.2
 cffi==1.16.0
@@ -29,9 +32,13 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 comm==0.2.2
+commonmark==0.9.1
 configobj==5.0.8
 cryptography==42.0.5
 cycler==0.12.1
+dacite==1.6.0
+dagshub==0.3.22
+dataclasses-json==0.6.4
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
@@ -59,13 +66,16 @@ fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.3.1
 funcy==2.0
+fusepy==3.0.1
 gitdb==4.0.11
 GitPython==3.1.42
+gql==3.5.0
 grandalf==0.8
+graphql-core==3.2.3
 gto==1.7.1
 h11==0.14.0
-httpcore==1.0.4
-httpx==0.27.0
+httpcore==0.16.3
+httpx==0.23.3
 hydra-core==1.3.2
 idna==3.6
 ipykernel==6.29.3
@@ -75,6 +85,7 @@ isoduration==20.11.0
 iterative-telemetry==0.0.8
 jedi==0.19.1
 Jinja2==3.1.3
+jmespath==1.0.1
 joblib==1.3.2
 json5==0.9.24
 jsonpointer==2.4
@@ -96,11 +107,13 @@ kiwisolver==1.4.5
 kombu==5.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==3.0.2
 multidict==6.0.5
+mypy-extensions==1.0.0
 nbclient==0.10.0
 nbconvert==7.16.3
 nbformat==5.10.3
@@ -117,6 +130,7 @@ pandas==1.3.3
 pandocfilters==1.5.1
 parso==0.8.3
 pathspec==0.12.1
+pathvalidate==3.0.0
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==3.11.0
@@ -142,12 +156,15 @@ qtconsole==5.5.1
 QtPy==2.4.1
 referencing==0.34.0
 requests==2.31.0
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
+rfc3986==1.5.0
 rfc3986-validator==0.1.1
-rich==13.7.1
+rich==13.1.0
 rpds-py==0.18.0
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
+s3transfer==0.10.1
 scikit-learn==1.3.2
 scipy==1.7.3
 scmrepo==3.3.1
@@ -163,6 +180,7 @@ soupsieve==2.5
 sqltrie==0.11.0
 stack-data==0.6.3
 tabulate==0.9.0
+tenacity==8.2.3
 terminado==0.18.1
 threadpoolctl==3.4.0
 tinycss2==1.2.1
@@ -171,8 +189,10 @@ tomlkit==0.12.4
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.2
+treelib==1.6.4
 typer==0.10.0
 types-python-dateutil==2.9.0.20240316
+typing-inspect==0.9.0
 typing_extensions==4.10.0
 tzdata==2024.1
 uri-template==1.3.0
